fix: Dockerfile Updated

--- a/spring-boot-modules/spring-boot-angular/Dockerfile
+++ b/spring-boot-modules/spring-boot-angular/Dockerfile
@@ -1,3 +1,4 @@
 FROM openjdk:11
+EXPOSE 8080
 ADD target/spring-boot-angular.jar spring-boot-angular.jar
 ENTRYPOINT ["java","-jar","/spring-boot-angular.jar"]
